--- a/ingredients.html
+++ b/ingredients.html
@@ -159,7 +159,7 @@
                                     ультра-увлажнение снаружи и изнутри ...
                                 </div>
 
-                                <a href="" class="ings__item-link">
+                                <a href="product.html" class="ings__item-link">
                                     Перейти к товару
                                     <svg class="ings__item-svg" viewBox="0 0 75 18">
                                         <use xlink:href="images/icons/sprite.svg#next"></use>
@@ -184,7 +184,7 @@
                                     ультра-увлажнение снаружи и изнутри ...
                                 </div>
 
-                                <a href="" class="ings__item-link">
+                                <a href="product.html" class="ings__item-link">
                                     Перейти к товару
                                     <svg class="ings__item-svg" viewBox="0 0 75 18">
                                         <use xlink:href="images/icons/sprite.svg#next"></use>
@@ -209,7 +209,7 @@
                                     ультра-увлажнение снаружи и изнутри ...
                                 </div>
 
-                                <a href="" class="ings__item-link">
+                                <a href="product.html" class="ings__item-link">
                                     Перейти к товару
                                     <svg class="ings__item-svg" viewBox="0 0 75 18">
                                         <use xlink:href="images/icons/sprite.svg#next"></use>
@@ -234,7 +234,7 @@
                                     ультра-увлажнение снаружи и изнутри ...
                                 </div>
 
-                                <a href="" class="ings__item-link">
+                                <a href="product.html" class="ings__item-link">
                                     Перейти к товару
                                     <svg class="ings__item-svg" viewBox="0 0 75 18">
                                         <use xlink:href="images/icons/sprite.svg#next"></use>
@@ -259,7 +259,7 @@
                                     ультра-увлажнение снаружи и изнутри ...
                                 </div>
 
-                                <a href="" class="ings__item-link">
+                                <a href="product.html" class="ings__item-link">
                                     Перейти к товару
                                     <svg class="ings__item-svg" viewBox="0 0 75 18">
                                         <use xlink:href="images/icons/sprite.svg#next"></use>
@@ -284,7 +284,7 @@
                                     ультра-увлажнение снаружи и изнутри ...
                                 </div>
 
-                                <a href="" class="ings__item-link">
+                                <a href="product.html" class="ings__item-link">
                                     Перейти к товару
                                     <svg class="ings__item-svg" viewBox="0 0 75 18">
                                         <use xlink:href="images/icons/sprite.svg#next"></use>
@@ -309,7 +309,7 @@
                                     ультра-увлажнение снаружи и изнутри ...
                                 </div>
 
-                                <a href="" class="ings__item-link">
+                                <a href="product.html" class="ings__item-link">
                                     Перейти к товару
                                     <svg class="ings__item-svg" viewBox="0 0 75 18">
                                         <use xlink:href="images/icons/sprite.svg#next"></use>
@@ -334,7 +334,7 @@
                                     ультра-увлажнение снаружи и изнутри ...
                                 </div>
 
-                                <a href="" class="ings__item-link">
+                                <a href="product.html" class="ings__item-link">
                                     Перейти к товару
                                     <svg class="ings__item-svg" viewBox="0 0 75 18">
                                         <use xlink:href="images/icons/sprite.svg#next"></use>
@@ -359,7 +359,7 @@
                                     ультра-увлажнение снаружи и изнутри ...
                                 </div>
 
-                                <a href="" class="ings__item-link">
+                                <a href="product.html" class="ings__item-link">
                                     Перейти к товару
                                     <svg class="ings__item-svg" viewBox="0 0 75 18">
                                         <use xlink:href="images/icons/sprite.svg#next"></use>
