--- a/product.html
+++ b/product.html
@@ -26,8 +26,8 @@
 <div class="wrapper">
 
     <!--header-->
-    <header class="header header_3"
-            style="background: url(images/bg/bg-manufact2.jpg) 0 0 no-repeat; background-size:cover;">
+    <header class="header header_3 header_product"
+            style="background: url(images/bg/bg-product.jpg) 0 0 no-repeat; background-size:cover;">
         <div class="container">
             <div class="container-small">
 
@@ -66,7 +66,7 @@
 
 
                 <!-- breadcrumbs -->
-                <div class="breads">
+                <div class="breads breads_product">
                     <a href="/index.html#slide1" class="bread">
                         Главная/
                     </a>
@@ -74,11 +74,13 @@
                         Каталог/
                     </a>
                     <a href="manufacturers.html" class="bread">
-                        производители/
+                        Поиск по сырью/
                     </a>
-
+                    <a href="ingredients.html" class="bread">
+                        активные ингредиенты/
+                    </a>
                     <span class="bread selected">
-                        Radiant
+                        Hyamagic 4D
                     </span>
                 </div>
                 <!-- END breadcrumbs -->
@@ -86,24 +88,18 @@
                 <!-- desc -->
                 <div class="desc">
                     <h1 class="title">
-                        Radiant
+                        Hyamagic 4D
                     </h1>
                     <div class="hr">
                         <div class="hr__line"></div>
                         <div class="hr__point"></div>
                     </div>
-                    <h3 class="subtitle">
-                        radiant.com
-                    </h3>
                     <div class="text">
                         <div class="row">
                             <div class="text__left">
-                                Ведущий корейский производитель активных ингредиентов для косметики. Компания основана в
-                                2002 году и успела отлично себя зарекомендовать в specialty-сегменте бьюти-индустрии.
-                                Anti-age, увлажнение, анти-стресс, сияние кожи - далеко не все полезные качества
-                                корейских продуктов. В портфолио присутствует экзотическая активка для самых
-                                требовательных покупателей: экстракт зеленой икры, секреция золотой улитки и даже масло
-                                жемчуга. Минимальный заказ 10 кг.
+                                <h3 style="color: #ffffff; font-size: 24px; font-weight: 500;">
+                                    <span style="color: #adb2b3;">Производитель:</span> Bloomage Freda Biopharm
+                                </h3>
                             </div>
                             <div class="text__right">
                                 <a download href="" class="download">
@@ -128,122 +124,129 @@
 
     <!-- page -->
     <div class="page">
-        <section class="manufacturer">
+        <section class="product">
             <div class="container-small">
+                <div class="row">
 
-                <div class="manufacturer__subtitle">
-                    Если о производителе много текста, который не помещается в баннере, <br>
-                    то он размещается здесь
-                </div>
+                    <!-- left -->
+                    <div class="product__left">
+                        <img src="images/content/product.jpg" alt="Hyamagig 4D" class="product__img">
+                    </div>
+                    <!-- END left -->
 
-                <div class="manufacturer__desc">
-                    Повседневная практика показывает, что рамки и место обучения кадров требуют от нас анализа
-                    дальнейших направлений развития. Разнообразный и богатый опыт дальнейшее развитие различных форм
-                    деятельности в значительной степени обуславливает создание существенных финансовых и
-                    административных условий.
-                    С другой стороны консультация с широким активом в значительной степени обуславливает создание
-                    направлений прогрессивного развития. Разнообразный и богатый опыт дальнейшее развитие различных форм
-                    деятельности способствует подготовки и реализации соответствующий условий активизации
-                </div>
+                    <!-- right -->
+                    <div class="product__right">
+                        <!-- title -->
+                        <div class="product__title">
+                            Hyamagig 4D
+                        </div>
+                        <!-- END title -->
 
-                <div class="manufacturer__title">
-                    Продукция производителя Radiant
-                </div>
+                        <!-- chars -->
+                        <div class="product__chars chars">
+                            <div class="char">
+                                <div class="char__title">
+                                    INCI
+                                </div>
+                                <div class="char__line"></div>
+                                <div class="char__val">
+                                    Isopropyl meristate
+                                </div>
+                            </div>
+                            <div class="char">
+                                <div class="char__title">
+                                    Процент ввода
+                                </div>
+                                <div class="char__line"></div>
+                                <div class="char__val">
+                                    1-3%
+                                </div>
+                            </div>
+                            <div class="char">
+                                <div class="char__title">
+                                    Упаковка
+                                </div>
+                                <div class="char__line"></div>
+                                <div class="char__val">
+                                    1 кг
+                                </div>
+                            </div>
+                            <div class="char">
+                                <div class="char__title">
+                                    Производитель
+                                </div>
+                                <div class="char__line"></div>
+                                <a href="" class="char__link">
+                                    Isopropyl meristate
+                                </a>
+                            </div>
+                            <div class="char">
+                                <div class="char__title">
+                                    Страна происхождения
+                                </div>
+                                <div class="char__line"></div>
+                                <div class="char__val">
+                                    Китай
+                                </div>
+                            </div>
+                        </div>
+                        <!-- END chars -->
 
-                <div class="manufacturer__list">
-                    <div class="row">
-                        <a href="product.html" class="manufacturer__item">
-                            <span class="manufacturer__item-title">
-                                AGINON
-                            </span>
-                            <span class="manufacturer__item-subtitle">
-                                Активные ингредиенты
-                            </span>
-                            <span class="manufacturer__item-desc">
-                                Актив на основе экстракта чая Белый Снег. Омолживающий эффект доказан ин-витро и
-                                ин-виво. Стимулирование энергообмена (АТФ) и дыхания клеток. Замедляет старение клеток.
-                                Визуально заметное действие против морщин. Увлажнение +24% за 2 недели, +34% за 4 недели.
-                                Повышение эластичности кожи +17% за 2 недели, +28% за 4 недели. Уплотнение кожи +12,5% за
-                                2 недели, +16,5% за 4 недели. Лифтинг, подтяжка кожи. Ввод 2%.
-                            </span>
-                        </a>
-                        <a href="product.html" class="manufacturer__item">
-                            <span class="manufacturer__item-title">
-                                AGINON
-                            </span>
-                            <span class="manufacturer__item-subtitle">
-                                Активные ингредиенты
-                            </span>
-                            <span class="manufacturer__item-desc">
-                                Актив на основе экстракта чая Белый Снег. Омолживающий эффект доказан ин-витро и
-                                ин-виво. Стимулирование энергообмена (АТФ) и дыхания клеток. Замедляет старение клеток.
-                                Визуально заметное действие против морщин. Увлажнение +24% за 2 недели, +34% за 4 недели.
-                                Повышение эластичности кожи +17% за 2 недели, +28% за 4 недели. Уплотнение кожи +12,5% за
-                                2 недели, +16,5% за 4 недели. Лифтинг, подтяжка кожи. Ввод 2%.
-                            </span>
-                        </a>
-                        <a href="product.html" class="manufacturer__item">
-                            <span class="manufacturer__item-title">
-                                AGINON
-                            </span>
-                            <span class="manufacturer__item-subtitle">
-                                Активные ингредиенты
-                            </span>
-                            <span class="manufacturer__item-desc">
-                                Актив на основе экстракта чая Белый Снег. Омолживающий эффект доказан ин-витро и
-                                ин-виво. Стимулирование энергообмена (АТФ) и дыхания клеток. Замедляет старение клеток.
-                                Визуально заметное действие против морщин. Увлажнение +24% за 2 недели, +34% за 4 недели.
-                                Повышение эластичности кожи +17% за 2 недели, +28% за 4 недели. Уплотнение кожи +12,5% за
-                                2 недели, +16,5% за 4 недели. Лифтинг, подтяжка кожи. Ввод 2%.
-                            </span>
-                        </a>
-                        <a href="product.html" class="manufacturer__item">
-                            <span class="manufacturer__item-title">
-                                AGINON
-                            </span>
-                            <span class="manufacturer__item-subtitle">
-                                Активные ингредиенты
-                            </span>
-                            <span class="manufacturer__item-desc">
-                                Актив на основе экстракта чая Белый Снег. Омолживающий эффект доказан ин-витро и
-                                ин-виво. Стимулирование энергообмена (АТФ) и дыхания клеток. Замедляет старение клеток.
-                                Визуально заметное действие против морщин. Увлажнение +24% за 2 недели, +34% за 4 недели.
-                                Повышение эластичности кожи +17% за 2 недели, +28% за 4 недели. Уплотнение кожи +12,5% за
-                                2 недели, +16,5% за 4 недели. Лифтинг, подтяжка кожи. Ввод 2%.
-                            </span>
-                        </a>
-                        <a href="product.html" class="manufacturer__item">
-                            <span class="manufacturer__item-title">
-                                AGINON
-                            </span>
-                            <span class="manufacturer__item-subtitle">
-                                Активные ингредиенты
-                            </span>
-                            <span class="manufacturer__item-desc">
-                                Актив на основе экстракта чая Белый Снег. Омолживающий эффект доказан ин-витро и
-                                ин-виво. Стимулирование энергообмена (АТФ) и дыхания клеток. Замедляет старение клеток.
-                                Визуально заметное действие против морщин. Увлажнение +24% за 2 недели, +34% за 4 недели.
-                                Повышение эластичности кожи +17% за 2 недели, +28% за 4 недели. Уплотнение кожи +12,5% за
-                                2 недели, +16,5% за 4 недели. Лифтинг, подтяжка кожи. Ввод 2%.
-                            </span>
-                        </a>
-                        <a href="product.html" class="manufacturer__item">
-                            <span class="manufacturer__item-title">
-                                AGINON
-                            </span>
-                            <span class="manufacturer__item-subtitle">
-                                Активные ингредиенты
-                            </span>
-                            <span class="manufacturer__item-desc">
-                                Актив на основе экстракта чая Белый Снег. Омолживающий эффект доказан ин-витро и
-                                ин-виво. Стимулирование энергообмена (АТФ) и дыхания клеток. Замедляет старение клеток.
-                                Визуально заметное действие против морщин. Увлажнение +24% за 2 недели, +34% за 4 недели.
-                                Повышение эластичности кожи +17% за 2 недели, +28% за 4 недели. Уплотнение кожи +12,5% за
-                                2 недели, +16,5% за 4 недели. Лифтинг, подтяжка кожи. Ввод 2%.
-                            </span>
-                        </a>
+                        <!-- app -->
+                        <div class="product__app app">
+
+                            <div class="app__top">
+                                <div class="app__text">
+                                    Применение:
+                                </div>
+                                <button class="app__more">
+                                    Показать все категории
+                                </button>
+                            </div>
+
+                            <div class="app__list">
+                                <div class="app__item">
+                                    <img src="images/content/apps/app1.png" alt="" class="app__img">
+                                    Декоративная <br> косметика
+                                </div>
+                                <div class="app__item">
+                                    <img src="images/content/apps/app2.png" alt="" class="app__img">
+                                    Краски <br> для волос
+                                </div>
+                                <div class="app__item">
+                                    <img src="images/content/apps/app3.png" alt="" class="app__img">
+                                    Детская <br> косметика
+                                </div>
+
+                            </div>
+                        </div>
+                        <!-- END app -->
+
+                        <!-- add -->
+                        <button class="product__add">
+                            Добавить в корзину
+                            <svg class="product__add-svg" viewBox="0 0 75 18">
+                                <use xlink:href="images/icons/sprite.svg#next"></use>
+                            </svg>
+                        </button>
+                        <!-- END add -->
+
+
 
                     </div>
+                    <!-- END right -->
+
+                    <!-- desc -->
+                    <div class="product__desc">
+                        Уникальный запатентованный синергетическое комплекс из 4х видов гиалуроновой кислоты:
+                        кросс-сшитый полимер ГК+ацетилированный гиалуронат натрия+высокомолекулярная ГК + олиго-ГК
+                        (ультра-низкомолекулярная) - ультра-увлажнение снаружи и изнутри - повышает эластичность кожи -
+                        действие в 4х измерениях: 3х-мерная пленка на поверхности кожи (увлажнение и защита
+                        anti-pollution) + проникающая в глубокие слои кожи низкомолекулярная гиалуроновая кислота
+                        (anti-age, подтяжка, уплотнение, заживление, борьба с морщинами и увлажнение изнутри)
+                    </div>
+                    <!-- END desc -->
+
                 </div>
             </div>
         </section>
