--- a/products.html
+++ b/products.html
@@ -131,7 +131,7 @@
                         <div class="row">
 
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Активные ингредиенты
                                     </span>
@@ -143,7 +143,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Жирные масла
                                     </span>
@@ -155,7 +155,7 @@
                                 </a>
                             </div>
                             <div class="products__item products__item_drop">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        ПАВы
                                     </span>
@@ -176,7 +176,7 @@
                                             </svg>
                                         </span>
                                     </a>
-                                    <a href="" class="products__item2">
+                                    <a href="ingredients.html" class="products__item2">
                                         <span class="products__item2-text">
                                            Амфотерные ПАВ
                                         </span>
@@ -186,7 +186,7 @@
                                         </svg>
                                        </span>
                                     </a>
-                                    <a href="" class="products__item2">
+                                    <a href="ingredients.html" class="products__item2">
                                         <span class="products__item2-text">
                                            Анионные ПАВ
                                         </span>
@@ -196,7 +196,7 @@
                                         </svg>
                                        </span>
                                     </a>
-                                    <a href="" class="products__item2">
+                                    <a href="ingredients.html" class="products__item2">
                                         <span class="products__item2-text">
                                            Катионные ПАВ
                                         </span>
@@ -206,7 +206,7 @@
                                         </svg>
                                        </span>
                                     </a>
-                                    <a href="" class="products__item2">
+                                    <a href="ingredients.html" class="products__item2">
                                         <span class="products__item2-text">
                                            Неионогенные ПАВ
                                         </span>
@@ -220,7 +220,7 @@
                             </div>
 
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Базы/Добавки
                                     </span>
@@ -232,7 +232,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Воски
                                     </span>
@@ -244,7 +244,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Силиконы
                                     </span>
@@ -257,7 +257,7 @@
                             </div>
 
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                       Вазелиновые масла
                                     </span>
@@ -269,7 +269,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Гликоли
                                     </span>
@@ -281,7 +281,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Солюбилизаторы
                                     </span>
@@ -294,7 +294,7 @@
                             </div>
 
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Волокна
                                     </span>
@@ -306,7 +306,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Спирта
                                     </span>
@@ -318,7 +318,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        УФ-фильтры
                                     </span>
@@ -331,7 +331,7 @@
                             </div>
 
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Ингредиенты для дезодорантов и антиперспирантов
                                     </span>
@@ -343,7 +343,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Красители, пигменты перламутры длякосметики
                                     </span>
@@ -355,7 +355,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                       Продукты длядепиляторов и завивки
                                     </span>
@@ -368,7 +368,7 @@
                             </div>
 
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Модификаторы реологии
                                     </span>
@@ -380,7 +380,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Наполнители
                                     </span>
@@ -392,7 +392,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        СО2 - экстракты
                                     </span>
@@ -430,7 +430,7 @@
                         <div class="row">
 
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Эфирные масла
                                     </span>
@@ -442,7 +442,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Пронеины
                                     </span>
@@ -454,7 +454,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Порошки
                                     </span>
@@ -467,7 +467,7 @@
                             </div>
 
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Эмульгаторы
                                     </span>
@@ -479,7 +479,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Растительные масла
                                     </span>
@@ -491,7 +491,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Консерванты
                                     </span>
@@ -504,7 +504,7 @@
                             </div>
 
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                       Эмоленты
                                     </span>
@@ -516,7 +516,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Пленкообразователи
                                     </span>
@@ -528,7 +528,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Жирные спирта
                                     </span>
@@ -541,7 +541,7 @@
                             </div>
 
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Скрабирующие
                                     </span>
@@ -553,7 +553,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Замутнители
                                     </span>
@@ -565,7 +565,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Полимеры
                                     </span>
@@ -578,7 +578,7 @@
                             </div>
 
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Специальные ингредиенты
                                     </span>
@@ -590,7 +590,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Отдушкии ароматизаторы
                                     </span>
@@ -602,7 +602,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                       Комплексообразователи и дисператоры
                                     </span>
@@ -615,7 +615,7 @@
                             </div>
 
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Связуещие и текстурирующие
                                     </span>
@@ -627,7 +627,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Оптические модификаторы
                                     </span>
@@ -639,7 +639,7 @@
                                 </a>
                             </div>
                             <div class="products__item">
-                                <a href="" class="products__item-link">
+                                <a href="ingredients.html" class="products__item-link">
                                     <span class="products__item-text">
                                        Аэросил
                                     </span>
