--- a/manufacturers.html
+++ b/manufacturers.html
@@ -128,7 +128,7 @@
 
                     <div class="container-small">
                         <div class="row">
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -138,7 +138,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -148,7 +148,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -158,7 +158,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -168,7 +168,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -178,7 +178,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -188,7 +188,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -198,7 +198,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -232,7 +232,7 @@
 
                     <div class="container-small">
                         <div class="row">
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -242,7 +242,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -252,7 +252,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -262,7 +262,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -272,7 +272,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -282,7 +282,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -292,7 +292,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -302,7 +302,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -313,7 +313,7 @@
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
 
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -323,7 +323,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -333,7 +333,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -343,7 +343,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -353,7 +353,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -363,7 +363,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -373,7 +373,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
@@ -383,7 +383,7 @@
                                 </span>
                                 <span class="manufacturers__item-title">AkzoNobel</span>
                             </a>
-                            <a href="" class="manufacturers__item">
+                            <a href="manufacturer.html" class="manufacturers__item">
                                 <span class="manufacturers__item-block">
                                     <span class="proportion proportion_266x168"></span>
                                     <span class="manufacturers__item-img">
