--- a/manufacturer.html
+++ b/manufacturer.html
@@ -66,7 +66,7 @@
 
 
                 <!-- breadcrumbs -->
-                <div class="breads">
+                <div class="breads breads_product">
                     <a href="/index.html#slide1" class="bread">
                         Главная/
                     </a>
